# rustic

./: Cargo.toml
src/: lib.rs  main.rs  vga_buffer.rs
